--- a/notebooks/imdb.ipynb
+++ b/notebooks/imdb.ipynb
@@ -249,7 +249,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [
     {
@@ -2263,19 +2263,7 @@
      ]
     }
    ],
-   "source": [
-    "movieplots['country'] = pd.Series(index=movieplots.index)\n",
-    "for i,movie in enumerate(countries):\n",
-    "    if movie[0] == '\"':\n",
-    "        continue\n",
-    "    split = movie.split('\\t')\n",
-    "    title = split[0]\n",
-    "    idx = movieplots[movieplots['title']== title].index\n",
-    "    #if the title is in our dataframe add the country\n",
-    "    if len(idx > 0):\n",
-    "        movieplots.loc[[idx[0]],['country']]= split[len(split)-1].replace('\\n','')\n",
-    "        print i"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
