some minor changes

--- a/notebooks/processing.ipynb
+++ b/notebooks/processing.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Text Processing "
+    "<h1 align='center'>Text Processing</h1>\n",
+    "<hr>"
    ]
   },
   {
@@ -49,7 +50,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Load, clean and filter our data"
+    "## Load and clean the data"
    ]
   },
   {
@@ -410,7 +411,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First we define some functions that we are going to use to process the plots"
+    "First we define some functions that we are going to use to process the plots and normalize the words."
    ]
   },
   {
