--- a/notebooks/topic_distribution.ipynb
+++ b/notebooks/topic_distribution.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 541,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -32,34 +32,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "dropbox = \"/Users/mr/Dropbox/moviemeta/\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 233,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# Wikipedia, probably won't use it\n",
-    "wiki_lda = models.LdaModel.load(dropbox +'lda_wiki.model')\n",
-    "wiki_corpus = corpora.MmCorpus(dropbox +'lda_wiki.corpus')\n",
-    "wiki_dict = corpora.Dictionary.load(dropbox +'lda_wiki.dict')\n",
-    "wiki_meta_df = pd.read_csv(dropbox + 'wiki_meta_df.csv')\n",
-    "\n",
-    "wiki_topic_matrix = matutils.corpus2dense(wiki_lda[wiki_corpus], num_terms=30)\n",
-    "wiki_topic_df = pd.DataFrame(np.ndarray.transpose(wiki_topic_matrix))\n",
-    "\n",
-    "wiki_topic_df = pd.concat([wiki_topic_df, wiki_meta_df], axis=1) \n",
-    "wiki_topic_df.head()"
    ]
   },
   {
@@ -71,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 347,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -82,9 +61,9 @@
     "imdb_dict = corpora.Dictionary.load(dropbox +'lda_imdb.dict')\n",
     "imdb_meta_df = pd.read_csv(dropbox + 'imdb_meta_df.csv')\n",
     "\n",
-    "imdb_topic_matrix = matutils.corpus2dense(imdb_lda[imdb_corpus], num_terms=30, num_docs=len(imdb_corpus))\n",
-    "imdb_topic_df = pd.DataFrame(np.ndarray.transpose(imdb_topic_matrix))\n",
-    "imdb_topic_df = pd.concat([imdb_topic_df, imdb_meta_df], axis=1) \n"
+    "#imdb_topic_matrix = matutils.corpus2dense(imdb_lda[imdb_corpus], num_terms=30, num_docs=len(imdb_corpus))\n",
+    "#imdb_topic_df = pd.DataFrame(np.ndarray.transpose(imdb_topic_matrix))\n",
+    "#imdb_topic_df = pd.concat([imdb_topic_df, imdb_meta_df], axis=1) \n"
    ]
   },
   {
@@ -358,26 +337,156 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/mr/anaconda/lib/python2.7/site-packages/ipykernel/__main__.py:6: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "/Users/mr/anaconda/lib/python2.7/site-packages/pandas/core/indexing.py:420: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  self.obj[item] = s\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "480000\n",
+      "490000\n",
+      "500000\n",
+      "510000\n",
+      "520000\n",
+      "530000\n",
+      "540000\n",
+      "550000\n",
+      "560000\n",
+      "570000\n",
+      "580000\n",
+      "590000\n",
+      "600000\n",
+      "610000\n",
+      "620000\n",
+      "630000\n",
+      "640000\n",
+      "650000\n",
+      "660000\n",
+      "670000\n",
+      "680000\n",
+      "690000\n",
+      "700000\n",
+      "710000\n",
+      "720000\n",
+      "730000\n",
+      "740000\n",
+      "750000\n",
+      "760000\n",
+      "770000\n",
+      "780000\n",
+      "790000\n",
+      "800000\n",
+      "810000\n",
+      "820000\n",
+      "830000\n",
+      "840000\n",
+      "850000\n",
+      "860000\n",
+      "870000\n",
+      "880000\n",
+      "890000\n",
+      "900000\n",
+      "910000\n",
+      "920000\n",
+      "930000\n",
+      "940000\n",
+      "950000\n",
+      "960000\n",
+      "970000\n",
+      "980000\n",
+      "990000\n",
+      "1000000\n",
+      "1010000\n",
+      "1020000\n",
+      "1030000\n",
+      "1040000\n",
+      "1050000\n",
+      "1060000\n",
+      "1070000\n",
+      "1080000\n",
+      "1090000\n",
+      "1100000\n",
+      "1110000\n",
+      "1120000\n",
+      "1130000\n",
+      "1140000\n",
+      "1150000\n",
+      "1160000\n",
+      "1170000\n",
+      "1180000\n",
+      "1190000\n",
+      "1200000\n",
+      "1210000\n",
+      "1220000\n",
+      "1230000\n",
+      "1240000\n",
+      "1250000\n",
+      "1260000\n",
+      "1270000\n",
+      "1280000\n",
+      "1290000\n",
+      "1300000\n",
+      "1310000\n",
+      "1320000\n",
+      "1330000\n",
+      "1340000\n",
+      "1350000\n",
+      "1360000\n",
+      "1370000\n",
+      "1380000\n",
+      "1390000\n",
+      "1400000\n",
+      "1410000\n",
+      "1420000\n",
+      "1430000\n",
+      "1440000\n",
+      "1450000\n",
+      "1460000\n",
+      "1470000\n",
+      "1480000\n",
+      "1490000"
+     ]
+    }
+   ],
    "source": [
+    "imdb_meta_2007_2015 = imdb_meta_df[imdb_meta_df.year > 2006]\n",
+    "\n",
     "with open(dropbox + \"imdb/countries.list\") as f:\n",
     "    countries = f.readlines()\n",
     "    \n",
-    "imdb_meta_top_df['origin'] = pd.Series(index=imdb_meta_top_df.index)\n",
+    "imdb_meta_2007_2015['origin'] = pd.Series(index=imdb_meta_2007_2015.index)\n",
     "for i,movie in enumerate(countries):\n",
     "    if movie[0] == '\"':\n",
     "        continue\n",
+    "    if i%10000 == 0:\n",
+    "        print i\n",
     "    split = movie.split('\\t')\n",
     "    title = split[0]\n",
-    "    idx = imdb_meta_top_df[imdb_meta_top_df['title']== title].index\n",
+    "    idx = imdb_meta_2007_2015[imdb_meta_2007_2015['title']== title].index\n",
     "    #if the title is in our dataframe add the country\n",
     "    if len(idx > 0):\n",
-    "        imdb_meta_top_df.loc[[idx[0]],['origin']]= split[len(split)-1].replace('\\n','')\n",
-    "imdb_meta_top_df.to_csv(dropbox + 'imdb_meta_top_df.csv')"
+    "        imdb_meta_2007_2015.loc[[idx[0]],['origin']]= split[len(split)-1].replace('\\n','')\n",
+    "imdb_meta_2007_2015.to_csv(dropbox + 'imdb_meta_2007_2015.csv')"
    ]
   },
   {
@@ -389,17 +498,17 @@
    },
    "outputs": [],
    "source": [
-    "#imdb_meta_top_df = pd.read_csv(dropbox + 'imdb_meta_top_df.csv')\n",
-    "#imdb_meta_top_df = imdb_meta_top_df.set_index('Unnamed: 0')\n",
-    "#TODO should assigs to imdb_topic_df?\n",
-    "imdb_meta_top_df = pd.concat([imdb_topic_df, imdb_meta_top_df[['origin']]], axis=1) "
+    "imdb_meta_2007_2015 = pd.read_csv(dropbox + 'imdb_meta_top_df.csv')\n",
+    "imdb_meta_2007_2015 = imdb_meta_2007_2015.set_index('Unnamed: 0')\n",
+    "\n",
+    "imdb_topic_df = pd.concat([imdb_topic_df, imdb_meta_2007_2015[['origin']]], axis=1) "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Filter the topic marix by popular movies"
+    "### Filter the topic matrix by popular movies"
    ]
   },
   {
@@ -1362,7 +1471,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Looking at the global development since 1950 we see a similar plot. There is one new observation we can make though: Until about 1985 there is a lot of movement in the topics, after that the lines become much more even."
+    "Looking at the global development since 1950 we see a similar plot. There is one observation we can make though: Until about 1985 there is a lot of movement in the topics, after that the lines become much more even. But this could be due to the fact that we there is much less data for the earlier years."
    ]
   }
  ],
