--- a/notebooks/link_movies.ipynb
+++ b/notebooks/link_movies.ipynb
@@ -7,6 +7,11 @@
     "# Linking Movie Titles in Multiple Data Tables\n",
     "\n",
     "\n",
+    "This notebook contains the code with which we attempted to link the movie plot data from IMDB and Wikipedia. There was no common ID linking these data. The naive title matching approach gets a lot of false positives and false negatives because there are multiple movies with the same title and sometimes the same movie's title written slightly differently at these two websites.\n",
+    "\n",
+    "We had to abandon this approach as the fuzzy string matching produced too many false positives (especially movies with very short titles) and the SPARQL linking (join) of multiple data sources is not supported by online endpoints like the ones hosted by dbpedia and linkedmdb. \n",
+    "\n",
+    "\n",
     "## String Matching approach"
    ]
   },
@@ -915,53 +920,6 @@
     "import httplib\n",
     "import time\n",
     "\n",
-    "unused1 = \"\"\"\n",
-    "                PREFIX dbpont: <http://dbpedia.org/ontology/>\n",
-    "                PREFIX dbpprop: <http://dbpedia.org/property/>\n",
-    "                PREFIX dbres: <http://dbpedia.org/resource/>\n",
-    "                PREFIX dbc: <http://dbpedia.org/resource/Category:>\n",
-    "                PREFIX foaf: <http://xmlns.com/foaf/0.1/>\n",
-    "                PREFIX dcterms: <http://purl.org/dc/terms/>\n",
-    "                PREFIX wdentity: <http://wikidata.org/entity/>\n",
-    "                PREFIX lmdb: <http://data.linkedmdb.org/resource/>\n",
-    "                PREFIX wd: <http://www.wikidata.org/entity/>\n",
-    "                PREFIX wdt: <http://www.wikidata.org/prop/direct/>\n",
-    "                PREFIX wikibase: <http://wikiba.se/ontology#>\n",
-    "\n",
-    "                SELECT DISTINCT ?title \n",
-    "                       (group_concat(distinct ?language;separator=\", \") as ?languages) \n",
-    "                       (group_concat(distinct ?country;separator=\", \") as ?countries) \n",
-    "                       ?released\n",
-    "                       ?gross\n",
-    "                       ?comment\n",
-    "                       ?abstract\n",
-    "                       (?movie as ?dbpediaLink)\n",
-    "                       ?wikipediaLink\n",
-    "                       ?wikidataID\n",
-    "                       ?imdb\n",
-    "                       ?rt\n",
-    "                WHERE\n",
-    "                {\n",
-    "                        ?movie rdf:type dbpont:Film .\n",
-    "                        ?movie rdfs:label ?title .\n",
-    "                        ?movie rdfs:comment ?comment .\n",
-    "                        ?movie dbpont:abstract ?abstract .\n",
-    "                        ?movie dcterms:subject dbc:%(year)s_films . \n",
-    "                        OPTIONAL { ?movie dbpprop:released ?released }\n",
-    "                        OPTIONAL { ?movie dbpprop:country ?country } \n",
-    "                        OPTIONAL { ?movie dbpont:gross ?gross }\n",
-    "                        OPTIONAL { ?movie dbpprop:language ?language }\n",
-    "                        OPTIONAL { ?movie foaf:isPrimaryTopicOf ?wikipediaLink }\n",
-    "                        OPTIONAL { ?movie owl:sameAs ?wikidataID }\n",
-    "                        OPTIONAL { ?wikidataID wdt:P345 ?imdb } \n",
-    "                        OPTIONAL { ?wikidataID wdt:P1258 ?rt }\n",
-    "\n",
-    "                        FILTER (lang(?title) = 'en')\n",
-    "                        FILTER (lang(?abstract) = 'en')\n",
-    "                        FILTER (lang(?comment) = 'en')\n",
-    "                        FILTER regex(?wikidataID, \"wikidata.org/entity\")\n",
-    "                }\n",
-    "                \"\"\"\n",
     "\n",
     "movies_for_year_query = \"\"\"\n",
     "                PREFIX dbpont: <http://dbpedia.org/ontology/>\n",
@@ -1004,45 +962,6 @@
     "                        FILTER (lang(?abstract) = 'en')\n",
     "                        FILTER (lang(?comment) = 'en')\n",
     "                        FILTER regex(?wikidataID, \"wikidata.org/entity\")\n",
-    "                }\n",
-    "                \"\"\"\n",
-    "\n",
-    "unused2 = \"\"\"\n",
-    "                PREFIX dbpont: <http://dbpedia.org/ontology/>\n",
-    "                PREFIX dbpprop: <http://dbpedia.org/property/>\n",
-    "                PREFIX dbres: <http://dbpedia.org/resource/>\n",
-    "                PREFIX dbc: <http://dbpedia.org/resource/Category:>\n",
-    "                PREFIX foaf: <http://xmlns.com/foaf/0.1/>\n",
-    "                PREFIX dcterms: <http://purl.org/dc/terms/>\n",
-    "                PREFIX wdentity: <http://wikidata.org/entity/>\n",
-    "\n",
-    "                SELECT DISTINCT ?title \n",
-    "                       (group_concat(distinct ?language;separator=\", \") as ?languages) \n",
-    "                       (group_concat(distinct ?country;separator=\", \") as ?countries) \n",
-    "                       ?released\n",
-    "                       ?gross\n",
-    "                       ?comment\n",
-    "                       ?abstract\n",
-    "                       (?movie as ?dbpediaLink)\n",
-    "                       ?wikipediaLink\n",
-    "                       ?wikidataID\n",
-    "\n",
-    "                WHERE\n",
-    "                {\n",
-    "                        ?movie rdf:type dbpont:Film .\n",
-    "                        ?movie rdfs:label ?title .\n",
-    "                        ?movie rdfs:comment ?comment .\n",
-    "                        ?movie dbpont:abstract ?abstract .\n",
-    "                        ?movie dcterms:subject dbc:%(year)s_films . \n",
-    "                        OPTIONAL { ?movie dbpprop:released ?released }\n",
-    "                        OPTIONAL { ?movie dbpprop:country ?country } \n",
-    "                        OPTIONAL { ?movie dbpont:gross ?gross }\n",
-    "                        OPTIONAL { ?movie dbpprop:language ?language }\n",
-    "                        OPTIONAL { ?movie foaf:isPrimaryTopicOf ?wikipediaLink }\n",
-    "\n",
-    "                        FILTER (lang(?title) = 'en')\n",
-    "                        FILTER (lang(?abstract) = 'en')\n",
-    "                        FILTER (lang(?comment) = 'en')\n",
     "                }\n",
     "                \"\"\"\n",
     "\n",
